After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738854 - loading screenshots is slow
loading screenshots is slow
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
: 738712 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-10-20 10:16 UTC by Andreas Nilsson
Modified: 2014-10-24 12:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
animated mockup (1.32 MB, image/gif)
2014-10-20 10:33 UTC, Andreas Nilsson
Details

Description Andreas Nilsson 2014-10-20 10:16:04 UTC
When clicking one of the thumbnails in the application view there is a noticeable delay. Most likely because it's then actually loads the bigger screenshot. This makes things feel a bit unresponsive in general.

One idea I had the other day was that maybe it could display the smaller screenshot scaled up, and then fade over to the more detailed one once that is loaded (since the smaller one is actually loaded and cached already).

I'll attach some sort of animated mockup shortly.
Comment 2 Andreas Nilsson 2014-10-20 10:33:17 UTC
Created attachment 288909 [details]
animated mockup

Ideally the blown up thumbnail would have a bunch of blur attached to it.
Comment 3 Richard Hughes 2014-10-24 09:48:48 UTC
*** Bug 738712 has been marked as a duplicate of this bug. ***
Comment 4 Richard Hughes 2014-10-24 12:53:53 UTC
Fixed in git master:

commit bc8ba3c22cd87dfb074ba5fb187e66fa79f9b1b8
Author: Richard Hughes <richard@hughsie.com>
Date:   Fri Oct 24 13:50:20 2014 +0100

    Show a blurred low-resolution screenshot while loading the HiDPI one
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=738854

:100644 100644 5470f81... 4f1557d... M  configure.ac
:100644 100644 bd81053... a96b993... M  src/gs-screenshot-image.c