Show a blurred low-resolution screenshot while loading the HiDPI one

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=738854